<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/spacing_8">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/spacing_24">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/spacing_90"
        android:layout_height="@dimen/spacing_90"
        android:padding="@dimen/spacing_1"
        android:scaleType="fitXY"
        android:src="@drawable/avatar_placeholder"
        app:shapeAppearanceOverlay="@style/Theme.SuitMedia.ShapeAppearanceOverlay.CornerSize.50Percent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_24"
        app:layout_constraintTop_toBottomOf="@id/avatar">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/edit_text_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_til_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_palindrome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_name">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/edit_text_palindrome"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_til_palindrome"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_16"
        android:text="@string/next"
        app:layout_constraintTop_toTopOf="@id/button_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_check"/>

    <Button
        android:id="@+id/button_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        app:layout_constraintTop_toBottomOf="@id/til_palindrome"
        app:layout_constraintEnd_toEndOf="parent"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>